<resources>
    <string name="app_name">LiftPress</string>
    <string name="maintxt_1">Welcome</string>
    <string name="maintxt_2">Create a new account</string>
    <string name="mainbtn_1">Login</string>
    <string name="mainbtn_2">Signup</string>
    <string name="maintxt1">Welcome</string>
    <string name="maintxt2">Craete a new account</string>
    <string name="mainbtn1">Login</string>
    <string name="mainbtn2">Signup</string>
    <string name="logintxt1">Login</string>
    <string name="inputpassword1">Password</string>
    <string name="inputemail1">Email</string>
    <string name="loginbtn1">Login</string>
    <string name="signuptxt1">Register</string>
    <string name="signupemail1">Email</string>
    <string name="signuppassword1">Password</string>
    <string name="sigupbtn1">Register</string>
    <string name="signupage">Age</string>
    <string name="signupcountry">Country</string>
</resources>