<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="318dp"
        android:layout_height="432dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/img2" />

    <TextView
        android:id="@+id/logintxt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logintxt1"
        android:textColor="@color/logintxt1"
        android:textSize="@dimen/logintxt1"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.607" />

    <EditText
        android:id="@+id/inputemail1"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:background="@drawable/forget"
        android:ems="10"
        android:hint="@string/inputemail1"
        android:inputType="textEmailAddress"
        android:textColor="@color/inputemail1"
        android:textColorHint="@color/inputemail1"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.726" />

    <EditText
        android:id="@+id/inputpassword1"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:background="@drawable/forget"
        android:ems="10"
        android:hint="@string/inputpassword1"
        android:inputType="textPassword"
        android:textColor="@color/inputpassword1"
        android:textColorHint="@color/inputpassword1"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.821" />

    <Button
        android:id="@+id/loginbtn1"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/loginbtn1"
        android:text="@string/loginbtn1"
        android:textSize="@dimen/loginbtn1"
        android:textStyle="bold"
        app:cornerRadius="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.932" />

</androidx.constraintlayout.widget.ConstraintLayout>