<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="287dp"
        android:layout_height="385dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.104"
        app:srcCompat="@drawable/img4" />

    <TextView
        android:id="@+id/signuptxt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signuptxt1"
        android:textColor="@color/signuptxt1"
        android:textSize="@dimen/signuptxt1"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.564" />

    <EditText
        android:id="@+id/signupemail1"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:background="@drawable/forget"
        android:ems="10"
        android:hint="@string/signupemail1"
        android:inputType="textEmailAddress"
        android:textColor="@color/signupemail1"
        android:textColorHighlight="@color/signupemail1"
        android:textColorHint="@color/signupemail1"
        android:textColorLink="@color/signupemail1"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.705" />

    <EditText
        android:id="@+id/signuppassword1"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:background="@drawable/forget"
        android:ems="10"
        android:hint="@string/signuppassword1"
        android:inputType="textPassword"
        android:textColor="@color/signuppassword1"
        android:textColorHighlight="@color/signuppassword1"
        android:textColorHint="@color/signuppassword1"
        android:textColorLink="@color/signuppassword1"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.801" />

    <Button
        android:id="@+id/sigupbtn1"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/sigupbtn1"
        android:text="@string/sigupbtn1"
        android:textSize="@dimen/sigupbtn1"
        android:textStyle="bold"
        app:cornerRadius="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.919" />

</androidx.constraintlayout.widget.ConstraintLayout>